--- a/entomof.html
+++ b/entomof.html
@@ -55,7 +55,8 @@
                                     <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="./spraying.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Опрыскивание</a>
                                     </li>
-                                    <li class="overlay-m-icons icon_kartografi text-left"><a href="./agromonitoring.html"
+                                    <li class="overlay-m-icons icon_kartografi text-left"><a
+                                            href="./agromonitoring.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Картография
                                             и
                                             мониторинг</a></li>
